--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^1.1.1+1
   provider: ^6.0.3
+  flutter_staggered_grid_view: ^0.6.1
 
 dev_dependencies:
 
