--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_svg: ^1.1.1+1
   provider: ^6.0.3
   flutter_staggered_grid_view: ^0.6.1
+  font_awesome_flutter: ^10.1.0
+  animate_do: ^2.1.0
 
 dev_dependencies:
 
